build.gradle and some optimization